[project]
name = "tabular-rl-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "notebook>=7.4.5",
    "pip>=25.2",
]
